Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.15-dev-6725-ge685b25-x86-gcc-lin-dbg
- Open a .bmp in Paint
- CTRL+A (Select All)
- DEL (remove)
CTRL+Z has to be called twice to get the picture again
Expected result : CTRL+Z has to be called once to get the picture again
fixme:(win32ss/user/user32/windows/cursoricon.c:1639) The flag LR_COPYRETURNORG is not implemented for bitmaps |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(54) : Undo: 2 |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(54) : Undo: 1 |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/toolsmodel.cpp(301) : ToolsModel::OnFinishDraw() |
err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"Voulez-vous enregistrer les modifications de Sans titre.png.bmp?" |
(win32ss/user/ntuser/msgqueue.c:842) err: Remove Window Messages E15F1D70 From Sent Queue |
(win32ss/user/ntuser/msgqueue.c:2400) err: MQ Cleanup Post Messages E15EFBF8 |
fixme:(dll/win32/imm32/ctf.c:77) (040C040C) |
(win32ss/gdi/ntgdi/gdiobj.c:1204) GreGetObjectOwner: invalid handle 0x00000000. |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(121) : PushImageForUndo: 0 |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/toolsmodel.cpp(301) : ToolsModel::OnFinishDraw() |
(win32ss/gdi/gdi32/objects/gdiobj.c:326) Trying to delete system object 0x00900011 |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(121) : PushImageForUndo: 1 |
fixme:(win32ss/user/user32/windows/cursoricon.c:1639) The flag LR_COPYRETURNORG is not implemented for bitmaps |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(121) : PushImageForUndo: 2 |
fixme:(win32ss/user/user32/windows/cursoricon.c:1639) The flag LR_COPYRETURNORG is not implemented for bitmaps |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(54) : Undo: 2 |
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(54) : Undo: 1 |
Attachments
Issue Links
- blocks
-
CORE-19094 mspaint: Refactor and improve Part 2
-
- Resolved
-