[MSPAINT] Fix PushImageForUndo (follow-up of 7c0615f)

CORE-19226, CORE-19237